{
    "name": "TouchEvent",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a6acc91a-5627-4da8-90c7-2e28564daf11",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9ee0ad6f-e633-44dc-a473-17602164130a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "01231dd0-1880-4f1b-b002-b2accf5c289b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a50ec28f-38c6-4e5a-b0b5-6b3a6051d836",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "554b142a-2973-4302-9751-19add53300b6",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}